[package]
name = "msboot"
version = "0.0.1"
edition = "2024"
description = "create windows bootable disk the easy way"
license = "MIT"
repository = "https://github.com/aduki-Inc/msboot"
documentation = "https://docs.rs/msboot"
homepage = "https://github.com/aduki-Inc/msboot"
keywords = ["boot", "system", "configuration"]

[dependencies]
